tests/coverage/antlr_parser/TestFileParser.py
# SPDX-License-Identifier: Apache-2.0
# Generated from TestFileParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import (
    ATNDeserializer,
    DFA,
    NoViableAltException,
    ParseTreeListener,
    ParseTreeVisitor,
    Parser,
    ParserATNSimulator,
    ParserRuleContext,
    PredictionContextCache,
    RecognitionException,
    Token,
    TokenStream,
)
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class TestFileParser(Parser):

    grammarFileName = "TestFileParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'### SUBSTRAIT_SCALAR_TEST:'",
        "<INVALID>",
        "'### SUBSTRAIT_INCLUDE:'",
        "<INVALID>",
        "'<!ERROR>'",
        "'<!UNDEFINED>'",
        "'overlfow'",
        "'rounding'",
        "'ERROR'",
        "'SATURATE'",
        "'SILENT'",
        "'TIE_TO_EVEN'",
        "'NAN'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'P'",
        "'T'",
        "'Y'",
        "'M'",
        "'D'",
        "'H'",
        "'S'",
        "'F'",
        "<INVALID>",
        "<INVALID>",
        "'null'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'::'",
        "<INVALID>",
        "'<'",
        "'>'",
        "'('",
        "')'",
        "'['",
        "']'",
        "','",
        "'='",
        "':'",
        "'?'",
        "'#'",
        "'.'",
    ]

    symbolicNames = [
        "<INVALID>",
        "SUBSTRAIT_SCALAR_TEST",
        "FORMAT_VERSION",
        "SUBSTRAIT_INCLUDE",
        "DESCRIPTION_LINE",
        "ERROR_RESULT",
        "UNDEFINED_RESULT",
        "OVERFLOW",
        "ROUNDING",
        "ERROR",
        "SATURATE",
        "SILENT",
        "TIE_TO_EVEN",
        "NAN",
        "INTEGER_LITERAL",
        "DECIMAL_LITERAL",
        "FLOAT_LITERAL",
        "BOOLEAN_LITERAL",
        "TIMESTAMP_TZ_LITERAL",
        "TIMESTAMP_LITERAL",
        "TIME_LITERAL",
        "DATE_LITERAL",
        "PERIOD_PREFIX",
        "TIME_PREFIX",
        "YEAR_SUFFIX",
        "M_SUFFIX",
        "DAY_SUFFIX",
        "HOUR_SUFFIX",
        "SECOND_SUFFIX",
        "FRACTIONAL_SECOND_SUFFIX",
        "INTERVAL_YEAR_LITERAL",
        "INTERVAL_DAY_LITERAL",
        "NULL_LITERAL",
        "STRING_LITERAL",
        "LineComment",
        "BlockComment",
        "Whitespace",
        "If",
        "Then",
        "Else",
        "Boolean",
        "I8",
        "I16",
        "I32",
        "I64",
        "FP32",
        "FP64",
        "String",
        "Binary",
        "Timestamp",
        "TimestampTZ",
        "Date",
        "Time",
        "IntervalYear",
        "IntervalDay",
        "UUID",
        "Decimal",
        "PrecisionTimestamp",
        "PrecisionTimestampTZ",
        "FixedChar",
        "VarChar",
        "FixedBinary",
        "Struct",
        "NStruct",
        "List",
        "Map",
        "ANY",
        "UserDefined",
        "Bool",
        "Str",
        "VBin",
        "Ts",
        "TsTZ",
        "IYear",
        "IDay",
        "Dec",
        "PTs",
        "PTsTZ",
        "FChar",
        "VChar",
        "FBin",
        "DOUBLE_COLON",
        "IDENTIFIER",
        "O_ANGLE_BRACKET",
        "C_ANGLE_BRACKET",
        "OPAREN",
        "CPAREN",
        "OBRACKET",
        "CBRACKET",
        "COMMA",
        "EQ",
        "COLON",
        "QMARK",
        "HASH",
        "DOT",
    ]

    RULE_doc = 0
    RULE_header = 1
    RULE_version = 2
    RULE_include = 3
    RULE_testGroupDescription = 4
    RULE_testCase = 5
    RULE_testGroup = 6
    RULE_arguments = 7
    RULE_result = 8
    RULE_argument = 9
    RULE_numericLiteral = 10
    RULE_nullArg = 11
    RULE_i8Arg = 12
    RULE_i16Arg = 13
    RULE_i32Arg = 14
    RULE_i64Arg = 15
    RULE_fp32Arg = 16
    RULE_fp64Arg = 17
    RULE_decimalArg = 18
    RULE_booleanArg = 19
    RULE_stringArg = 20
    RULE_dateArg = 21
    RULE_timeArg = 22
    RULE_timestampArg = 23
    RULE_timestampTzArg = 24
    RULE_intervalYearArg = 25
    RULE_intervalDayArg = 26
    RULE_intervalYearLiteral = 27
    RULE_intervalDayLiteral = 28
    RULE_timeInterval = 29
    RULE_datatype = 30
    RULE_scalarType = 31
    RULE_fixedCharType = 32
    RULE_varCharType = 33
    RULE_fixedBinaryType = 34
    RULE_decimalType = 35
    RULE_precisionTimestampType = 36
    RULE_precisionTimestampTZType = 37
    RULE_parameterizedType = 38
    RULE_numericParameter = 39
    RULE_substraitError = 40
    RULE_func_option = 41
    RULE_option_name = 42
    RULE_option_value = 43
    RULE_func_options = 44

    ruleNames = [
        "doc",
        "header",
        "version",
        "include",
        "testGroupDescription",
        "testCase",
        "testGroup",
        "arguments",
        "result",
        "argument",
        "numericLiteral",
        "nullArg",
        "i8Arg",
        "i16Arg",
        "i32Arg",
        "i64Arg",
        "fp32Arg",
        "fp64Arg",
        "decimalArg",
        "booleanArg",
        "stringArg",
        "dateArg",
        "timeArg",
        "timestampArg",
        "timestampTzArg",
        "intervalYearArg",
        "intervalDayArg",
        "intervalYearLiteral",
        "intervalDayLiteral",
        "timeInterval",
        "datatype",
        "scalarType",
        "fixedCharType",
        "varCharType",
        "fixedBinaryType",
        "decimalType",
        "precisionTimestampType",
        "precisionTimestampTZType",
        "parameterizedType",
        "numericParameter",
        "substraitError",
        "func_option",
        "option_name",
        "option_value",
        "func_options",
    ]

    EOF = Token.EOF
    SUBSTRAIT_SCALAR_TEST = 1
    FORMAT_VERSION = 2
    SUBSTRAIT_INCLUDE = 3
    DESCRIPTION_LINE = 4
    ERROR_RESULT = 5
    UNDEFINED_RESULT = 6
    OVERFLOW = 7
    ROUNDING = 8
    ERROR = 9
    SATURATE = 10
    SILENT = 11
    TIE_TO_EVEN = 12
    NAN = 13
    INTEGER_LITERAL = 14
    DECIMAL_LITERAL = 15
    FLOAT_LITERAL = 16
    BOOLEAN_LITERAL = 17
    TIMESTAMP_TZ_LITERAL = 18
    TIMESTAMP_LITERAL = 19
    TIME_LITERAL = 20
    DATE_LITERAL = 21
    PERIOD_PREFIX = 22
    TIME_PREFIX = 23
    YEAR_SUFFIX = 24
    M_SUFFIX = 25
    DAY_SUFFIX = 26
    HOUR_SUFFIX = 27
    SECOND_SUFFIX = 28
    FRACTIONAL_SECOND_SUFFIX = 29
    INTERVAL_YEAR_LITERAL = 30
    INTERVAL_DAY_LITERAL = 31
    NULL_LITERAL = 32
    STRING_LITERAL = 33
    LineComment = 34
    BlockComment = 35
    Whitespace = 36
    If = 37
    Then = 38
    Else = 39
    Boolean = 40
    I8 = 41
    I16 = 42
    I32 = 43
    I64 = 44
    FP32 = 45
    FP64 = 46
    String = 47
    Binary = 48
    Timestamp = 49
    TimestampTZ = 50
    Date = 51
    Time = 52
    IntervalYear = 53
    IntervalDay = 54
    UUID = 55
    Decimal = 56
    PrecisionTimestamp = 57
    PrecisionTimestampTZ = 58
    FixedChar = 59
    VarChar = 60
    FixedBinary = 61
    Struct = 62
    NStruct = 63
    List = 64
    Map = 65
    ANY = 66
    UserDefined = 67
    Bool = 68
    Str = 69
    VBin = 70
    Ts = 71
    TsTZ = 72
    IYear = 73
    IDay = 74
    Dec = 75
    PTs = 76
    PTsTZ = 77
    FChar = 78
    VChar = 79
    FBin = 80
    DOUBLE_COLON = 81
    IDENTIFIER = 82
    O_ANGLE_BRACKET = 83
    C_ANGLE_BRACKET = 84
    OPAREN = 85
    CPAREN = 86
    OBRACKET = 87
    CBRACKET = 88
    COMMA = 89
    EQ = 90
    COLON = 91
    QMARK = 92
    HASH = 93
    DOT = 94

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class DocContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header(self):
            return self.getTypedRuleContext(TestFileParser.HeaderContext, 0)

        def EOF(self):
            return self.getToken(TestFileParser.EOF, 0)

        def testGroup(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestFileParser.TestGroupContext)
            else:
                return self.getTypedRuleContext(TestFileParser.TestGroupContext, i)

        def getRuleIndex(self):
            return TestFileParser.RULE_doc

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDoc"):
                listener.enterDoc(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDoc"):
                listener.exitDoc(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDoc"):
                return visitor.visitDoc(self)
            else:
                return visitor.visitChildren(self)

    def doc(self):

        localctx = TestFileParser.DocContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_doc)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.header()
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.testGroup()
                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 4):
                    break

            self.state = 96
            self.match(TestFileParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeaderContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(TestFileParser.VersionContext, 0)

        def include(self):
            return self.getTypedRuleContext(TestFileParser.IncludeContext, 0)

        def getRuleIndex(self):
            return TestFileParser.RULE_header

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterHeader"):
                listener.enterHeader(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitHeader"):
                listener.exitHeader(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitHeader"):
                return visitor.visitHeader(self)
            else:
                return visitor.visitChildren(self)

    def header(self):

        localctx = TestFileParser.HeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.version()
            self.state = 99
            self.include()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VersionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBSTRAIT_SCALAR_TEST(self):
            return self.getToken(TestFileParser.SUBSTRAIT_SCALAR_TEST, 0)

        def FORMAT_VERSION(self):
            return self.getToken(TestFileParser.FORMAT_VERSION, 0)

        def getRuleIndex(self):
            return TestFileParser.RULE_version

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterVersion"):
                listener.enterVersion(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitVersion"):
                listener.exitVersion(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitVersion"):
                return visitor.visitVersion(self)
            else:
                return visitor.visitChildren(self)

    def version(self):

        localctx = TestFileParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(TestFileParser.SUBSTRAIT_SCALAR_TEST)
            self.state = 102
            self.match(TestFileParser.FORMAT_VERSION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUBSTRAIT_INCLUDE(self):
            return self.getToken(TestFileParser.SUBSTRAIT_INCLUDE, 0)

        def STRING_LITERAL(self, i: int = None):
            if i is None:
                return self.getTokens(TestFileParser.STRING_LITERAL)
            else:
                return self.getToken(TestFileParser.STRING_LITERAL, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TestFileParser.COMMA)
            else:
                return self.getToken(TestFileParser.COMMA, i)

        def getRuleIndex(self):
            return TestFileParser.RULE_include

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterInclude"):
                listener.enterInclude(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitInclude"):
                listener.exitInclude(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitInclude"):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)

    def include(self):

        localctx = TestFileParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_include)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(TestFileParser.SUBSTRAIT_INCLUDE)
            self.state = 105
            self.match(TestFileParser.STRING_LITERAL)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 89:
                self.state = 106
                self.match(TestFileParser.COMMA)
                self.state = 107
                self.match(TestFileParser.STRING_LITERAL)
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestGroupDescriptionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DESCRIPTION_LINE(self):
            return self.getToken(TestFileParser.DESCRIPTION_LINE, 0)

        def getRuleIndex(self):
            return TestFileParser.RULE_testGroupDescription

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTestGroupDescription"):
                listener.enterTestGroupDescription(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTestGroupDescription"):
                listener.exitTestGroupDescription(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTestGroupDescription"):
                return visitor.visitTestGroupDescription(self)
            else:
                return visitor.visitChildren(self)

    def testGroupDescription(self):

        localctx = TestFileParser.TestGroupDescriptionContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_testGroupDescription)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(TestFileParser.DESCRIPTION_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestCaseContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None  # Token

        def OPAREN(self):
            return self.getToken(TestFileParser.OPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(TestFileParser.ArgumentsContext, 0)

        def CPAREN(self):
            return self.getToken(TestFileParser.CPAREN, 0)

        def EQ(self):
            return self.getToken(TestFileParser.EQ, 0)

        def result(self):
            return self.getTypedRuleContext(TestFileParser.ResultContext, 0)

        def IDENTIFIER(self):
            return self.getToken(TestFileParser.IDENTIFIER, 0)

        def OBRACKET(self):
            return self.getToken(TestFileParser.OBRACKET, 0)

        def func_options(self):
            return self.getTypedRuleContext(TestFileParser.Func_optionsContext, 0)

        def CBRACKET(self):
            return self.getToken(TestFileParser.CBRACKET, 0)

        def getRuleIndex(self):
            return TestFileParser.RULE_testCase

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTestCase"):
                listener.enterTestCase(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTestCase"):
                listener.exitTestCase(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTestCase"):
                return visitor.visitTestCase(self)
            else:
                return visitor.visitChildren(self)

    def testCase(self):

        localctx = TestFileParser.TestCaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testCase)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            localctx.functionName = self.match(TestFileParser.IDENTIFIER)
            self.state = 116
            self.match(TestFileParser.OPAREN)
            self.state = 117
            self.arguments()
            self.state = 118
            self.match(TestFileParser.CPAREN)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 87:
                self.state = 119
                self.match(TestFileParser.OBRACKET)
                self.state = 120
                self.func_options()
                self.state = 121
                self.match(TestFileParser.CBRACKET)

            self.state = 125
            self.match(TestFileParser.EQ)
            self.state = 126
            self.result()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TestGroupContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testGroupDescription(self):
            return self.getTypedRuleContext(
                TestFileParser.TestGroupDescriptionContext, 0
            )

        def testCase(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestFileParser.TestCaseContext)
            else:
                return self.getTypedRuleContext(TestFileParser.TestCaseContext, i)

        def getRuleIndex(self):
            return TestFileParser.RULE_testGroup

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTestGroup"):
                listener.enterTestGroup(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTestGroup"):
                listener.exitTestGroup(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTestGroup"):
                return visitor.visitTestGroup(self)
            else:
                return visitor.visitChildren(self)

    def testGroup(self):

        localctx = TestFileParser.TestGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_testGroup)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.testGroupDescription()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.testCase()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la == 82):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(TestFileParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(TestFileParser.ArgumentContext, i)

        def COMMA(self, i: int = None):
            if i is None:
                return self.getTokens(TestFileParser.COMMA)
            else:
                return self.getToken(TestFileParser.COMMA, i)

        def getRuleIndex(self):
            return TestFileParser.RULE_arguments

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArguments"):
                listener.enterArguments(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArguments"):
                listener.exitArguments(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArguments"):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)

    def arguments(self):

        localctx = TestFileParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_arguments)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.argument()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 89:
                self.state = 135
                self.match(TestFileParser.COMMA)
                self.state = 136
                self.argument()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ResultContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(TestFileParser.ArgumentContext, 0)

        def substraitError(self):
            return self.getTypedRuleContext(TestFileParser.SubstraitErrorContext, 0)

        def getRuleIndex(self):
            return TestFileParser.RULE_result

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterResult"):
                listener.enterResult(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitResult"):
                listener.exitResult(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitResult"):
                return visitor.visitResult(self)
            else:
                return visitor.visitChildren(self)

    def result(self):

        localctx = TestFileParser.ResultContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_result)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14, 15, 16, 17, 18, 19, 20, 21, 30, 31, 32, 33]:
                self.enterOuterAlt(localctx, 1)
                self.state = 142
                self.argument()
                pass
            elif token in [5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.substraitError()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nullArg(self):
            return self.getTypedRuleContext(TestFileParser.NullArgContext, 0)

        def i8Arg(self):
            return self.getTypedRuleContext(TestFileParser.I8ArgContext, 0)

        def i16Arg(self):
            return self.getTypedRuleContext(TestFileParser.I16ArgContext, 0)

        def i32Arg(self):
            return self.getTypedRuleContext(TestFileParser.I32ArgContext, 0)

        def i64Arg(self):
            return self.getTypedRuleContext(TestFileParser.I64ArgContext, 0)

        def fp32Arg(self):
            return self.getTypedRuleContext(TestFileParser.Fp32ArgContext, 0)

        def fp64Arg(self):
            return self.getTypedRuleContext(TestFileParser.Fp64ArgContext, 0)

        def booleanArg(self):
            return self.getTypedRuleContext(TestFileParser.BooleanArgContext, 0)
